# sistema_mercado

./: .gitignore  CMakeLists.txt  COMO_RODAR_QT.md  INSTALACAO_RAPIDA_QT.md  INTERFACE_GUIDE.md  LICENSE  QT6_INSTALACAO_GUIA_COMPLETO.md  README.md  RELEASE_NOTES_v2.0.md  build.bat  build.ps1  build_simple.bat  install_qt.bat  install_qt.ps1  install_qt6_auto.bat  install_qt6_auto.ps1  install_qt6_fixed.ps1  run_app.bat
.github/: copilot-instructions.md
database/: init.sql
include/api/: api_server.h
include/database/: database_manager.h
include/gui/: main_window.h
include/models/: cliente.h  produto.h  produto_simple.h  venda.h
include/services/: produto_service.h  relatorio_service.h  venda_service.h
resources/: resources.qrc  style.qss
src/: hybrid_main.cpp  main.cpp  simple_main.cpp
src/api/: api_server.cpp
src/database/: database_manager.cpp
src/gui/: main_window.cpp
src/models/: cliente.cpp  produto.cpp  produto_simple.cpp  venda.cpp
src/services/: produto_service.cpp  relatorio_service.cpp  venda_service.cpp
